// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have blank in list 1`] = `
"<printHW5>
  <div>
    <HW5>
      <div>
        <form onSubmit={[Function]}>
          <input name=\\"inputValue\\" value=\\"\\" onChange={[Function]} />
        </form>
        <ul>
          <li />
          <li>
            qwerty
          </li>
        </ul>
      </div>
    </HW5>
  </div>
</printHW5>"
`;

exports[`should have list 1`] = `
"<printHW5>
  <div>
    <HW5>
      <div>
        <form onSubmit={[Function]}>
          <input name=\\"inputValue\\" value=\\"\\" onChange={[Function]} />
        </form>
        <ul>
          <li>
            qwerty
          </li>
        </ul>
      </div>
    </HW5>
  </div>
</printHW5>"
`;

exports[`should have lists 1`] = `
"<printHW5>
  <div>
    <HW5>
      <div>
        <form onSubmit={[Function]}>
          <input name=\\"inputValue\\" value=\\"\\" onChange={[Function]} />
        </form>
        <ul>
          <li>
            zxcvbn
          </li>
          <li>
            qwerty
          </li>
        </ul>
      </div>
    </HW5>
  </div>
</printHW5>"
`;

exports[`value should change 1`] = `
"<printHW5>
  <div>
    <HW5>
      <div>
        <form onSubmit={[Function]}>
          <input name=\\"inputValue\\" value=\\"qwerty\\" onChange={[Function]} />
        </form>
        <ul />
      </div>
    </HW5>
  </div>
</printHW5>"
`;
